--- a/app/html/home/_benefits.html
+++ b/app/html/home/_benefits.html
@@ -3,7 +3,7 @@
     <div class="top">
       <h2 class="title-section title-section--center">Почему выбирают нас?</h2>
       <p class="top__text">
-        Ключевые преимущества, почему родители доверяют нам своих детей.
+        Ключевые преимущества, почему родители доверяют нам своих детей
       </p>
     </div>
     <ul class="benefits__list">
