--- a/app/html/home/_dream.html
+++ b/app/html/home/_dream.html
@@ -1,4 +1,4 @@
-<section class="programs indent">
+<section class="programs indent" id="dream">
   <div class="container">
     <div class="top">
       <h2 class="title-section title-section--center">Спят усталые игрушки</h2>
