--- a/app/html/home/_programs.html
+++ b/app/html/home/_programs.html
@@ -1,4 +1,4 @@
-<section class="programs indent">
+<section class="programs indent" id="programs">
   <div class="container">
     <div class="top">
       <h2 class="title-section title-section--center">Наши программы</h2>
@@ -15,7 +15,7 @@
         </div>
       </li>
       <li class="programs__row">
-        <img class="programs__img" src="images/programs/2.jpg" width="525" height="570" alt="Дополнительные занятия">
+        <img class="programs__img programs__img--big" src="images/programs/2.jpg" width="525" height="570" alt="Дополнительные занятия">
         <div class="programs__info">
           <h3 class="programs__subtitle">Дополнительные занятия</h3>
           <p class="programs__text">
