--- a/app/html/home/_schedule.html
+++ b/app/html/home/_schedule.html
@@ -1,4 +1,4 @@
-<section class="schedule indent">
+<section class="schedule indent" id="schedule">
   <div class="container">
     <div class="top">
       <h2 class="title-section title-section--center">Расписание занятий</h2>
