адаптив главного экрана и мобильного меню

--- a/app/index.html
+++ b/app/index.html
@@ -41,12 +41,31 @@
         </ul>
       </nav>
       <a class="header__btn btn desktop" href="#form">Записаться</a>
-      <button class="menu-btn menu-btn--header" style="display: none" type="button">
+      <button class="menu-btn menu-btn--header" type="button">
         <span class="menu-btn__line"></span>
         <span class="sr-only">Interact with menu</span>
       </button>
     </div>
   </div>
+  <nav class="header__mobile">
+    <ul class="header__list">
+      <li>
+        <a class="header__link mobile" href="#benefits">Преимущества</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#programs">Программы</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#dream">Условия сна</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#schedule">Расписание</a>
+      </li>
+      <li>
+        <a class="header__link mobile" href="#groups">Группы</a>
+      </li>
+    </ul>
+  </nav>
 </header>
 <main>
   <section class="home indent" id="home">
@@ -54,7 +73,7 @@
     <div class="home__inner">
       <div class="home__content">
         <h1 class="home__title">
-          Добро пожаловать в Приоритет
+          Добро пожаловать <br> в Приоритет
         </h1>
         <p class="home__text">
           Детский сад в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
