--- a/app/html/home/_home.html
+++ b/app/html/home/_home.html
@@ -3,7 +3,7 @@
     <div class="home__inner">
       <div class="home__content">
         <h1 class="home__title">
-          Добро пожаловать в Приоритет
+          Добро пожаловать <br> в Приоритет
         </h1>
         <p class="home__text">
           Детский сад в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
