текстовые правки в разных секциях и замены некоторых фотографий

--- a/app/html/home/_benefits.html
+++ b/app/html/home/_benefits.html
@@ -15,10 +15,10 @@
         </p>
       </li>
       <li class="benefits__card">
-        <img class="benefits__img" src="images/benefits/2.png" width="219" height="196" alt="Профессиональные педагоги">
-        <h3 class="benefits__name">Профессиональные педагоги</h3>
+        <img class="benefits__img" src="images/benefits/2.png" width="219" height="196" alt="Отдых детям">
+        <h3 class="benefits__name">Отдых детям</h3>
         <p class="benefits__description">
-          Воспитатели с опытом, логопед, психолог.
+          Бассейн, сауна, соляная комната.
         </p>
       </li>
       <li class="benefits__card">
@@ -39,7 +39,7 @@
         <img class="benefits__img" src="images/benefits/5.png" width="207" height="196" alt="Бассейн и спорт">
         <h3 class="benefits__name">Бассейн и спорт</h3>
         <p class="benefits__description">
-          Плавание, фитнес, танцы для детей.
+          Плавание и танцы для детей
         </p>
       </li>
       <li class="benefits__card">
