--- a/app/html/home/_dream.html
+++ b/app/html/home/_dream.html
@@ -1,17 +1,17 @@
 <section class="programs indent" id="dream">
   <div class="container">
     <div class="top">
-      <h2 class="title-section title-section--center">Спят усталые игрушки</h2>
-      <p class="top__text">Как мы заботимся о сне детей</p>
+      <h2 class="title-section title-section--center">Наши преимущества</h2>
+      <p class="top__text">Как мы заботимся о ваших детях</p>
     </div>
     <ul class="programs__list">
       <li class="programs__row">
         <img class="programs__img" src="images/programs/1.png" width="525" height="280"
-             alt="Основные программы детского садика">
+             alt="Основные программы детского центра">
         <div class="programs__info">
           <h3 class="programs__subtitle">Условия сна</h3>
           <p class="programs__text">
-            В нашем садике дети спят на удобных кроватках, обеспечивающих максимальный комфорт и безопасность во время
+            В нашем центре дети спят на удобных кроватках, обеспечивающих максимальный комфорт и безопасность во время
             дневного сна. Каждая кроватка снабжена мягким матрасом и подушкой, а для уютной атмосферы в спальне всегда
             поддерживается тишина и спокойная обстановка.
           </p>
@@ -24,6 +24,36 @@
           <p class="programs__text">
             Каждое утро для детей подготавливают индивидуальные кроватки с чистыми постельными принадлежностями.
             Приятное освещение и спокойная музыка помогают малышам расслабиться и отдохнуть.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" src="images/programs/4.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Спорт площадка</h3>
+          <p class="programs__text">
+            Безопасная игровая зона с современными тренажёрами помогает детям развивать силу, ловкость и координацию
+            через активные игры на свежем воздухе.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" src="images/programs/5.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Группы детей</h3>
+          <p class="programs__text">
+            Мы формируем небольшие группы по возрасту, создавая комфортную атмосферу для общения, дружбы и развития
+            каждого ребёнка.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" style="object-position: bottom" src="images/programs/6.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Соляная комната</h3>
+          <p class="programs__text">
+            Специальное помещение с лечебным микроклиматом укрепляет иммунитет и дыхательную систему, помогая детям
+            расслабиться и восстановить силы.
           </p>
         </div>
       </li>
