--- a/app/html/home/_groups.html
+++ b/app/html/home/_groups.html
@@ -7,11 +7,11 @@
     <ul class="programs__list">
       <li class="programs__row">
         <img class="programs__img" src="images/programs/1.png" width="525" height="280"
-             alt="Основные программы детского садика">
+             alt="Основные программы детского центра">
         <div class="programs__info">
           <h3 class="programs__subtitle">Группы</h3>
           <p class="programs__text">
-            В нашем садике есть четыре возрастные группы, каждая из которых предлагает индивидуальный подход, учитывая
+            В нашем центре есть четыре возрастные группы, каждая из которых предлагает индивидуальный подход, учитывая
             возраст и потребности детей. Мы создаём комфортную атмосферу для развития, игры и обучения. Узнайте больше о
             каждой группе ниже.
           </p>
