--- a/app/html/home/_home.html
+++ b/app/html/home/_home.html
@@ -6,7 +6,7 @@
           Добро пожаловать <br> в Приоритет
         </h1>
         <p class="home__text">
-          Детский сад в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
+          Детский центр в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
         </p>
         <div class="home__actions">
           <button class="btn" type="button">Записаться на экскурсию</button>
