--- a/app/html/home/_reviews.html
+++ b/app/html/home/_reviews.html
@@ -3,7 +3,7 @@
     <div class="top">
       <h2 class="title-section title-section--center">Отзывы</h2>
       <p class="top__text">
-        Отзывы родителей о нашем детском саде
+        Отзывы родителей о нашем детском центре
       </p>
     </div>
     <div class="reviews__navigation">
@@ -32,7 +32,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Мы ходим в садик 1,5 года, и очень довольны. Воспитатели заботливые, ребенок быстро научился многому,
+              Мы ходим в центр 1,5 года, и очень довольны. Воспитатели заботливые, ребенок быстро научился многому,
               включая общение и самостоятельность. Каждый день у нас радость от посещения!
             </p>
           </div>
@@ -47,7 +47,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Мой ребенок с радостью ходит в сад и всегда рассказывает о веселых занятиях.
+              Мой ребенок с радостью ходит в центр и всегда рассказывает о веселых занятиях.
               Воспитатели внимательные и заботливые, и я вижу, как он растет и развивается
             </p>
           </div>
@@ -62,8 +62,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Наша дочка быстро адаптировалась в саду и всегда с удовольствием рассказывает о занятиях и прогулках. Она
-              скучает по саду на выходных, что говорит о том, что ей там очень нравится!
+              Наша дочка быстро адаптировалась в центре и всегда с удовольствием рассказывает о занятиях и прогулках. Она
+              скучает по центру на выходных, что говорит о том, что ей там очень нравится!
             </p>
           </div>
         </div>
@@ -77,8 +77,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Ребенок посещает садик второй год, и мы довольны. Воспитатели внимательные, занятия интересные, и ребенок
-              с радостью идет в сад
+              Ребенок посещает центр второй год, и мы довольны. Воспитатели внимательные, занятия интересные, и ребенок
+              с радостью идет в центр
             </p>
           </div>
         </div>
@@ -92,7 +92,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Ребенок стал более общительным и уверенным. В саду много интересных мероприятий,
+              Ребенок стал более общительным и уверенным. В центре много интересных мероприятий,
               и он всегда возвращается домой с новыми поделками и историями о друзьях
             </p>
           </div>
@@ -107,8 +107,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Садик замечательный! Мы остались здесь, даже когда получили место в другом. Воспитатели заботливые,
-              а ребенок всегда с удовольствием уходит в сад.
+              центр замечательный! Мы остались здесь, даже когда получили место в другом. Воспитатели заботливые,
+              а ребенок всегда с удовольствием уходит в центр.
             </p>
           </div>
         </div>
