--- a/app/html/home/_schedule.html
+++ b/app/html/home/_schedule.html
@@ -3,7 +3,7 @@
     <div class="top">
       <h2 class="title-section title-section--center">Расписание занятий</h2>
       <p class="top__text">
-        День в нашем садике
+        День в нашем центре
       </p>
     </div>
     <div class="programs__row" style="display: none"></div>
