--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,6 +1,4 @@
-@include('components/_head.html', {
-title: 'Link Cut'
-})
+@include('components/_head.html')
 
 <body class="body">
 <img class="bg" src="images/bg-start.svg" alt="задний фон декоративный">
