--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta
       name="description"
-      content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн,
-      спорт и развивающие программы. Запишитесь на экскурсию!"
+      content="Детский сад «Приоритет» – уютная среда, опытные педагоги, бассейн, спорт и развивающие программы. Запишитесь на экскурсию!"
   >
   <title>Детский садик "Приоритет"</title>
   <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
@@ -76,7 +75,7 @@
           Добро пожаловать <br> в Приоритет
         </h1>
         <p class="home__text">
-          Детский сад в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
+          Детский центр в котором создаем уютную и безопасную среду, где дети учатся, развиваются и находят друзей!
         </p>
         <div class="home__actions">
           <button class="btn" type="button">Записаться на экскурсию</button>
@@ -105,10 +104,10 @@
         </p>
       </li>
       <li class="benefits__card">
-        <img class="benefits__img" src="images/benefits/2.png" width="219" height="196" alt="Профессиональные педагоги">
-        <h3 class="benefits__name">Профессиональные педагоги</h3>
+        <img class="benefits__img" src="images/benefits/2.png" width="219" height="196" alt="Отдых детям">
+        <h3 class="benefits__name">Отдых детям</h3>
         <p class="benefits__description">
-          Воспитатели с опытом, логопед, психолог.
+          Бассейн, сауна, соляная комната.
         </p>
       </li>
       <li class="benefits__card">
@@ -129,7 +128,7 @@
         <img class="benefits__img" src="images/benefits/5.png" width="207" height="196" alt="Бассейн и спорт">
         <h3 class="benefits__name">Бассейн и спорт</h3>
         <p class="benefits__description">
-          Плавание, фитнес, танцы для детей.
+          Плавание и танцы для детей
         </p>
       </li>
       <li class="benefits__card">
@@ -176,9 +175,6 @@
               Помощь психолога
             </li>
             <li class="programs__item">
-              Обучение вокалу
-            </li>
-            <li class="programs__item">
               Тренировки в бассейне
             </li>
             <li class="programs__item">
@@ -192,9 +188,6 @@
             </li>
             <li class="programs__item">
               Студия танца
-            </li>
-            <li class="programs__item">
-              Обучение английскому языку
             </li>
           </ul>
         </div>
@@ -223,17 +216,17 @@
   <section class="programs indent" id="dream">
   <div class="container">
     <div class="top">
-      <h2 class="title-section title-section--center">Спят усталые игрушки</h2>
-      <p class="top__text">Как мы заботимся о сне детей</p>
+      <h2 class="title-section title-section--center">Наши преимущества</h2>
+      <p class="top__text">Как мы заботимся о ваших детях</p>
     </div>
     <ul class="programs__list">
       <li class="programs__row">
         <img class="programs__img" src="images/programs/1.png" width="525" height="280"
-             alt="Основные программы детского садика">
+             alt="Основные программы детского центра">
         <div class="programs__info">
           <h3 class="programs__subtitle">Условия сна</h3>
           <p class="programs__text">
-            В нашем садике дети спят на удобных кроватках, обеспечивающих максимальный комфорт и безопасность во время
+            В нашем центре дети спят на удобных кроватках, обеспечивающих максимальный комфорт и безопасность во время
             дневного сна. Каждая кроватка снабжена мягким матрасом и подушкой, а для уютной атмосферы в спальне всегда
             поддерживается тишина и спокойная обстановка.
           </p>
@@ -246,6 +239,36 @@
           <p class="programs__text">
             Каждое утро для детей подготавливают индивидуальные кроватки с чистыми постельными принадлежностями.
             Приятное освещение и спокойная музыка помогают малышам расслабиться и отдохнуть.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" src="images/programs/4.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Спорт площадка</h3>
+          <p class="programs__text">
+            Безопасная игровая зона с современными тренажёрами помогает детям развивать силу, ловкость и координацию
+            через активные игры на свежем воздухе.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" src="images/programs/5.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Группы детей</h3>
+          <p class="programs__text">
+            Мы формируем небольшие группы по возрасту, создавая комфортную атмосферу для общения, дружбы и развития
+            каждого ребёнка.
+          </p>
+        </div>
+      </li>
+      <li class="programs__row">
+        <img class="programs__img" style="object-position: bottom" src="images/programs/6.jpg" width="525" height="280" alt="Дополнительные занятия">
+        <div class="programs__info">
+          <h3 class="programs__subtitle">Соляная комната</h3>
+          <p class="programs__text">
+            Специальное помещение с лечебным микроклиматом укрепляет иммунитет и дыхательную систему, помогая детям
+            расслабиться и восстановить силы.
           </p>
         </div>
       </li>
@@ -268,7 +291,7 @@
     <div class="top">
       <h2 class="title-section title-section--center">Отзывы</h2>
       <p class="top__text">
-        Отзывы родителей о нашем детском саде
+        Отзывы родителей о нашем детском центре
       </p>
     </div>
     <div class="reviews__navigation">
@@ -297,7 +320,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Мы ходим в садик 1,5 года, и очень довольны. Воспитатели заботливые, ребенок быстро научился многому,
+              Мы ходим в центр 1,5 года, и очень довольны. Воспитатели заботливые, ребенок быстро научился многому,
               включая общение и самостоятельность. Каждый день у нас радость от посещения!
             </p>
           </div>
@@ -312,7 +335,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Мой ребенок с радостью ходит в сад и всегда рассказывает о веселых занятиях.
+              Мой ребенок с радостью ходит в центр и всегда рассказывает о веселых занятиях.
               Воспитатели внимательные и заботливые, и я вижу, как он растет и развивается
             </p>
           </div>
@@ -327,8 +350,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Наша дочка быстро адаптировалась в саду и всегда с удовольствием рассказывает о занятиях и прогулках. Она
-              скучает по саду на выходных, что говорит о том, что ей там очень нравится!
+              Наша дочка быстро адаптировалась в центре и всегда с удовольствием рассказывает о занятиях и прогулках. Она
+              скучает по центру на выходных, что говорит о том, что ей там очень нравится!
             </p>
           </div>
         </div>
@@ -342,8 +365,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Ребенок посещает садик второй год, и мы довольны. Воспитатели внимательные, занятия интересные, и ребенок
-              с радостью идет в сад
+              Ребенок посещает центр второй год, и мы довольны. Воспитатели внимательные, занятия интересные, и ребенок
+              с радостью идет в центр
             </p>
           </div>
         </div>
@@ -357,7 +380,7 @@
               </div>
             </div>
             <p class="reviews__text">
-              Ребенок стал более общительным и уверенным. В саду много интересных мероприятий,
+              Ребенок стал более общительным и уверенным. В центре много интересных мероприятий,
               и он всегда возвращается домой с новыми поделками и историями о друзьях
             </p>
           </div>
@@ -372,8 +395,8 @@
               </div>
             </div>
             <p class="reviews__text">
-              Садик замечательный! Мы остались здесь, даже когда получили место в другом. Воспитатели заботливые,
-              а ребенок всегда с удовольствием уходит в сад.
+              центр замечательный! Мы остались здесь, даже когда получили место в другом. Воспитатели заботливые,
+              а ребенок всегда с удовольствием уходит в центр.
             </p>
           </div>
         </div>
@@ -387,7 +410,7 @@
     <div class="top">
       <h2 class="title-section title-section--center">Расписание занятий</h2>
       <p class="top__text">
-        День в нашем садике
+        День в нашем центре
       </p>
     </div>
     <div class="programs__row" style="display: none"></div>
@@ -517,11 +540,11 @@
     <ul class="programs__list">
       <li class="programs__row">
         <img class="programs__img" src="images/programs/1.png" width="525" height="280"
-             alt="Основные программы детского садика">
+             alt="Основные программы детского центра">
         <div class="programs__info">
           <h3 class="programs__subtitle">Группы</h3>
           <p class="programs__text">
-            В нашем садике есть четыре возрастные группы, каждая из которых предлагает индивидуальный подход, учитывая
+            В нашем центре есть четыре возрастные группы, каждая из которых предлагает индивидуальный подход, учитывая
             возраст и потребности детей. Мы создаём комфортную атмосферу для развития, игры и обучения. Узнайте больше о
             каждой группе ниже.
           </p>
