--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,20 +1,22 @@
 @include('components/_head.html')
 
 <body class="body">
-<img class="bg" src="images/bg-start.svg" alt="задний фон декоративный">
-@include('components/_header.html')
-<main>
-  @include('home/_home.html')
-  @include('home/_benefits.html')
-  @include('home/_programs.html')
-  @include('home/_dream.html')
-  @include('home/_reviews.html')
-  @include('home/_schedule.html')
-  @include('home/_groups.html')
-  @include('home/_form.html')
-</main>
-@include('components/_footer.html')
-@include('components/_modal.html')
-<script src="js/main.min.js" type="module"></script>
-<script src="js/phone-mask.js" type="module"></script>
+  <img class="bg" src="images/bg-start.svg" alt="задний фон декоративный">
+  @include('components/_header.html')
+  <main>
+    @include('home/_home.html')
+    @include('home/_benefits.html')
+    @include('home/_about.html')
+    @include('home/_programs.html')
+    @include('home/_dream.html')
+    @include('home/_reviews.html')
+    @include('home/_schedule.html')
+    @include('home/_groups.html')
+    @include('home/_form.html')
+  </main>
+  @include('components/_footer.html')
+  @include('components/_modal.html')
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="js/main.min.js" type="module"></script>
+  <script src="js/phone-mask.js" type="module"></script>
 </body>
