добавлена новая секция - контакты, и команда детского центра

--- a/app/html/home/_groups.html
+++ b/app/html/home/_groups.html
@@ -1,4 +1,4 @@
-<section class="groups" id="groups">
+<section class="groups indent" id="groups">
   <div class="container">
     <div class="top">
       <h2 class="title-section title-section--center">Наши группы</h2>
