--- a/app/html/index.html
+++ b/app/html/index.html
@@ -8,6 +8,7 @@
     @include('home/_benefits.html')
     @include('home/_about.html')
     @include('home/_programs.html')
+    @include('home/_command.html')
     @include('home/_dream.html')
     @include('home/_reviews.html')
     @include('home/_schedule.html')
